--- a/ghostty/config
+++ b/ghostty/config
@@ -1,4 +1,4 @@
-theme = Github-Dark-High-Contrast
+theme = Github Dark High Contrast
 font-family = Monaco
 window-padding-x = 7
 window-padding-y = 5
